--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,16 @@ app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
 app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
+
 app.env.veilarbaktivitetUrl=${VEILARBAKTIVITET_URL}
 app.env.veilarbaktivitetScope=${VEILARBAKTIVITET_SCOPE}
 app.env.veilarboppfolgingUrl=${VEILARBOPPFOLGING_URL}
 app.env.veilarboppfolgingScope=${VEILARBOPPFOLGING_SCOPE}
+app.env.veilarbmalverkUrl=${VEILARBMALVERK_URL}
+app.env.veilarbmalverkScope=${VEILARBMALVERK_SCOPE}
+app.env.arbeidsokerRegisterertOppslagUrl=${ARBEIDSSOKER_REGISTERET_OPPSLAG_URL}
+app.env.arbeidsokerRegisterertOppslagScope=${ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE}
 
-app.datasource.url=${JDBC_URL}
-app.datasource.username=${JDBC_USERNAME}
-app.datasource.password=${JDBC_PASSWORD}
+app.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
+#app.datasource.username=${JDBC_USERNAME}
+#app.datasource.password=${JDBC_PASSWORD}
