--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
             <artifactId>embedded-postgres</artifactId>
             <version>2.1.0</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
