--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,13 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>9.22.3</version>
+            <version>${flyway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.github.navikt.common-java-modules</groupId>
@@ -219,6 +225,7 @@
         <commons-io.version>2.11.0</commons-io.version>
         <commons-lang.version>3.12.0</commons-lang.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <flyway.version>11.8.0</flyway.version>
     </properties>
 
 
