--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,8 @@ spring.flyway.enabled=false
 spring.data.jdbc.repositories.enabled=false
 
 # Application environment
-app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
-app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
-app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
+app.env.azureAdDiscoveryUrl=${AZURE_APP_WELL_KNOWN_URL}
+app.env.azureAdClientId=${AZURE_APP_CLIENT_ID}
 
 app.env.veilarbaktivitetUrl=${VEILARBAKTIVITET_URL}
 app.env.veilarbaktivitetScope=${VEILARBAKTIVITET_SCOPE}
