Set more stuff in db config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ app.env.arbeidsokerRegisterertOppslagUrl=${ARBEIDSSOKER_REGISTERET_OPPSLAG_URL}
 app.env.arbeidsokerRegisterertOppslagScope=${ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE}
 
 app.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
-#app.datasource.username=${JDBC_USERNAME}
-#app.datasource.password=${JDBC_PASSWORD}
+app.datasource.database=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_DATABASE}
+app.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
+app.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
