--- a/.github/workflows/deploy-feature-branch.yml
+++ b/.github/workflows/deploy-feature-branch.yml
@@ -43,6 +43,7 @@ jobs:
   deploy-dev:
     name: Deploy application to dev
     needs: test-build-and-push
+    environment: dev-gcp
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
