Try to use auto config instead

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.flyway.enabled=false
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
 
+spring.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+
 # Application environment
 app.env.azureAdDiscoveryUrl=${AZURE_APP_WELL_KNOWN_URL}
 app.env.azureAdClientId=${AZURE_APP_CLIENT_ID}
