--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.flyway.enabled=false
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
 
-spring.datasource.url="jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}"
+spring.datasource.url=jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
