--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.datasource.url=jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
+spring.flyway.locations=db/migration
+
 # Application environment
 app.env.azureAdDiscoveryUrl=${AZURE_APP_WELL_KNOWN_URL}
 app.env.azureAdClientId=${AZURE_APP_CLIENT_ID}
@@ -28,8 +30,3 @@ app.env.veilarboppfolgingScope=${VEILARBOPPFOLGING_SCOPE}
 app.env.veilarbmalverkUrl=${VEILARBMALVERK_URL}
 app.env.arbeidsokerRegisterertOppslagUrl=${ARBEIDSSOKER_REGISTERET_OPPSLAG_URL}
 app.env.arbeidsokerRegisterertOppslagScope=${ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE}
-
-app.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
-app.datasource.database=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_DATABASE}
-app.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
-app.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
