--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
 spring.flyway.locations=db/migration
+spring.flyway.baseline-version=2
+spring.flyway.baseline-on-migrate=true
 
 # Application environment
 app.env.azureAdDiscoveryUrl=${AZURE_APP_WELL_KNOWN_URL}
