--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.url=jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
-spring.flyway.locations=db/migration
+spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-version=2
 spring.flyway.baseline-on-migrate=true
 
