Add veilarboppfolging and veilarbaktivitet to outbound

--- a/nais-dev-gcp.yaml
+++ b/nais-dev-gcp.yaml
@@ -41,6 +41,11 @@ spec:
     pool: nav-dev
   accessPolicy:
     outbound:
+      rules:
+        - application: veilarboppfolging
+          namespace: poao
+        - application: veilarbaktivitet
+          namespace: dab
       external:
         - host: veilarboppfolging.intern.dev.nav.no
   env:
