Add creds to config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.flyway.enabled=false
 spring.data.jdbc.repositories.enabled=false
 
 spring.datasource.url=jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
+spring.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
+spring.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
