--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
 
-# Vi migrerer databasen med flyway manuelt
-spring.flyway.enabled=false
+# Vi migrerer databasen med flyway automatisk
+spring.flyway.enabled=true
 
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
