Use jdbc url instead

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.flyway.enabled=true
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
 
-spring.datasource.url=jdbc:${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_URL}
-spring.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
-spring.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
+spring.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_JDBC_URL}
+#spring.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
+#spring.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
