--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
 
 # Vi migrerer databasen med flyway manuelt
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.table=schema_version
+spring.flyway.enabled=false
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.table=schema_version
 
-spring.datasource.url=${JDBC_URL}
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
+#spring.datasource.url=${JDBC_URL}
+#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.minimum-idle=2
 
 # Application environment
 app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
