--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
 
 # Vi migrerer databasen med flyway manuelt
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.table=schema_version
 
