--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,9 @@ management.prometheus.metrics.export.enabled=true
 
 # Vi migrerer databasen med flyway manuelt
 spring.flyway.enabled=false
-#spring.flyway.locations=classpath:db/migration
-#spring.flyway.table=schema_version
 
-#spring.datasource.url=${JDBC_URL}
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.minimum-idle=2
+# Vi setter opp kobling til database manuelt
+spring.data.jdbc.repositories.enabled=false
 
 # Application environment
 app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
