--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,5 @@ app.env.veilarboppfolgingScope=${VEILARBOPPFOLGING_SCOPE}
 app.env.veilarbmalverkUrl=${VEILARBMALVERK_URL}
 app.env.arbeidsokerRegisterertOppslagUrl=${ARBEIDSSOKER_REGISTERET_OPPSLAG_URL}
 app.env.arbeidsokerRegisterertOppslagScope=${ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE}
+app.env.pdlUrl=${PDL_URL}
+app.env.pdlScope=${PDL_SCOPE}
