--- a/nais-dev-gcp.yaml
+++ b/nais-dev-gcp.yaml
@@ -58,7 +58,7 @@ spec:
     - name: VEILARBAKTIVITET_SCOPE
       value: api://dev-gcp.dab.veilarbaktivitet/.default
     - name: VEILARBOPPFOLGING_URL
-      value: http://veilarboppfolging
+      value: http://veilarboppfolging.dab
     - name: VEILARBOPPFOLGING_SCOPE
       value: api://dev-gcp.poao.veilarboppfolging/.default
     - name: ARBEIDSSOKER_REGISTERET_OPPSLAG_URL
