--- a/nais-gcp.yaml
+++ b/nais-gcp.yaml
@@ -13,21 +13,20 @@ spec:
     path: veilarbdirigent/internal/prometheus
   liveness:
     path: veilarbdirigent/internal/isAlive
-    initialDelay: 60
+    initialDelay: 15
   readiness:
     path: veilarbdirigent/internal/isReady
-    initialDelay: 60
+    initialDelay: 15
   replicas:
     min: 1
     max: 1 # It should be 1. Race condition problems may arise if this is greater
     cpuThresholdPercentage: 50
   resources:
     limits:
-      cpu: "2"
       memory: 1024Mi
     requests:
       cpu: 200m
-      memory: 768Mi
+      memory: 512Mi
   secureLogs:
     enabled: true
   gcp:
@@ -38,7 +37,7 @@ spec:
         databases:
           - name: veilarbdirigent
   kafka:
-    pool: nav-dev
+    pool: nav-prod
   accessPolicy:
     outbound:
       rules:
@@ -49,24 +48,24 @@ spec:
         - application: paw-arbeidssoekerregisteret-api-oppslag
           namespace: paw
       external:
-        - host: pdl-api.dev-fss-pub.nais.io
+        - host: pdl-api.prod-fss-pub.nais.io
   env:
     - name: VEILARBAKTIVITET_URL
       value: http://veilarbaktivitet
     - name: VEILARBAKTIVITET_SCOPE
-      value: api://dev-gcp.dab.veilarbaktivitet/.default
+      value: api://prod-gcp.dab.veilarbaktivitet/.default
     - name: VEILARBOPPFOLGING_URL
       value: http://veilarboppfolging.poao
     - name: VEILARBOPPFOLGING_SCOPE
-      value: api://dev-gcp.poao.veilarboppfolging/.default
+      value: api://prod-gcp.poao.veilarboppfolging/.default
     - name: ARBEIDSSOKER_REGISTERET_OPPSLAG_URL
       value: http://paw-arbeidssoekerregisteret-api-oppslag.paw
     - name: ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE
-      value: api://dev-gcp.paw.paw-arbeidssoekerregisteret-api-oppslag/.default
+      value: api://prod-gcp.paw.paw-arbeidssoekerregisteret-api-oppslag/.default
     - name: PDL_URL
-      value: https://pdl-api.dev-fss-pub.nais.io
+      value: https://pdl-api.prod-fss-pub.nais.io
     - name: PDL_SCOPE
-      value: api://dev-fss.pdl.pdl-api/.default
+      value: api://prod-fss.pdl.pdl-api/.default
   azure:
     application:
       enabled: true
