Enable auto-instrumentation

--- a/nais-dev-gcp.yaml
+++ b/nais-dev-gcp.yaml
@@ -50,6 +50,10 @@ spec:
           namespace: paw
       external:
         - host: pdl-api.dev-fss-pub.nais.io
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   env:
     - name: VEILARBAKTIVITET_URL
       value: http://veilarbaktivitet
