Migrer til GCP (#173)
* WIP: Gcp

* Check null

* Bump commons

* Add commons-io to explicit dep

* Override commons-io

* Bump commons more

* Bump flyway and add flyway-postgres

* Bump shedlock

* spring-boot-starter-data-jdbc -> -starter-jdbc

* Remove some dep overrides

* Fix azure env

* Fix malverk url

* Set more stuff in db config

* Flytt aktivitet-template ut av malverk

* Prøv uten å sette driver

* Set env

* Set dataSourcaClassName

* Set Driver classname

* Back to only datasource

* Less is more

* Set driver classname

* Try to use auto config instead

* Prefix url with jdbc

* Remove fnutter

* Fjern credentials

* Configure flyway

* Update baseline configs

* Try with classpath prefix on flyway migration location

* Add veilarboppfolging and veilarbaktivitet to outbound

* Replace OracleJdbcTemplateConsumerRepository with PostgresJdbcTemplateConsumerRepository in KafkaConfigAiven

* Add creds to config

* Flyway enabled true

* Use jdbc url instead

* Set baseline 1.5

* Dont use baseline

* Move old migrations folder out

* Stub metrics-client

* Dont use dual table in health check

* Update README.md

* Add PDL env

* Add pdl to external host

* Fix ingreesses

* Remove fnutter

* Change arbs oppslag url

* .dab

* Fix namespace

* Enable kafka

* Add prod config

* Fix namespace in action

* Template fra og til dato

* Add slettet to enum

* Fix templating

* Enable auto-instrumentation

* Remove zone from timestamp

* Always zulu zone

--- a/.github/workflows/deploy-feature-branch.yml
+++ b/.github/workflows/deploy-feature-branch.yml
@@ -38,11 +38,12 @@ jobs:
         uses: nais/docker-build-push@v0
         id: docker-build-push
         with:
-          team: pto
+          team: dab
 
   deploy-dev:
     name: Deploy application to dev
     needs: test-build-and-push
+    environment: dev-gcp
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -50,6 +51,6 @@ jobs:
       - name: Deploy application
         uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: dev-fss
-          RESOURCE: nais-dev.yaml
+          CLUSTER: dev-gcp
+          RESOURCE: nais-dev-gcp.yaml
           VAR: image=${{ needs.test-build-and-push.outputs.image }}
