--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,22 +7,30 @@ management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
 management.prometheus.metrics.export.enabled=true
 
-# Vi migrerer databasen med flyway manuelt
-spring.flyway.enabled=false
+# Vi migrerer databasen med flyway automatisk
+spring.flyway.enabled=true
 
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
 
+spring.datasource.url=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_JDBC_URL}
+#spring.datasource.username=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_USERNAME}
+#spring.datasource.password=${NAIS_DATABASE_VEILARBDIRIGENT_VEILARBDIRIGENT_PASSWORD}
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+
+spring.flyway.locations=classpath:db/migration
+
 # Application environment
-app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
-app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
-app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
-app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
+app.env.azureAdDiscoveryUrl=${AZURE_APP_WELL_KNOWN_URL}
+app.env.azureAdClientId=${AZURE_APP_CLIENT_ID}
+
 app.env.veilarbaktivitetUrl=${VEILARBAKTIVITET_URL}
 app.env.veilarbaktivitetScope=${VEILARBAKTIVITET_SCOPE}
 app.env.veilarboppfolgingUrl=${VEILARBOPPFOLGING_URL}
 app.env.veilarboppfolgingScope=${VEILARBOPPFOLGING_SCOPE}
-
-app.datasource.url=${JDBC_URL}
-app.datasource.username=${JDBC_USERNAME}
-app.datasource.password=${JDBC_PASSWORD}
+app.env.veilarbmalverkUrl=${VEILARBMALVERK_URL}
+app.env.arbeidsokerRegisterertOppslagUrl=${ARBEIDSSOKER_REGISTERET_OPPSLAG_URL}
+app.env.arbeidsokerRegisterertOppslagScope=${ARBEIDSSOKER_REGISTERET_OPPSLAG_SCOPE}
+app.env.pdlUrl=${PDL_URL}
+app.env.pdlScope=${PDL_SCOPE}
