--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         uses: nais/docker-build-push@v0
         id: docker-build-push
         with:
-          team: pto
+          team: dab
 
   deploy-dev:
     name: Deploy application to dev
@@ -75,7 +75,7 @@ jobs:
       - name: Deploy application to prod
         uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: prod-fss
+          CLUSTER: prod-gcp
           RESOURCE: nais.yaml
           VAR: image=${{ needs.test-build-and-push.outputs.image }}
       - name: Slack Notification (deploy failure)
